fix(css): adjust alignment of header elements

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -122,7 +122,7 @@ body{
 label[for="nav-trigger"] {
   /* critical positioning styles */
   position: fixed;
-  right: 17px; top: 22px;
+  right: 17px; top: 25px;
   z-index: 2;
 
   /* non-critical apperance styles */
@@ -199,6 +199,7 @@ header{
   font-size: 0.9em;
   font-weight: 700;
   margin-right: 4em;
+  margin-top: 0.3em;
   padding: .4em;
 }
 
@@ -683,6 +684,7 @@ footer p {
   .btn-donate{
   font-size: 1.2em;
   margin-right: 3em;
+  margin-top: 0;
 }
 
 
@@ -980,7 +982,7 @@ input {
 label[for="nav-trigger"] {
   /* critical positioning styles */
   position: fixed;
-  right: 17px; top: 28px;
+  right: 17px; top: 26px;
   z-index: 2;
 
   /* non-critical apperance styles */
